Bug 212317 - [GTK4] Fix input methods
Summary: [GTK4] Fix input methods
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: WebKitGTK (show other bugs)
Version: WebKit Nightly Build
Hardware: Unspecified Unspecified
: P2 Normal
Assignee: Nobody
URL:
Keywords: Gtk
Depends on:
Blocks: GTK4
  Show dependency treegraph
 
Reported: 2020-05-24 05:44 PDT by Carlos Garcia Campos
Modified: 2020-06-03 06:46 PDT (History)
5 users (show)

See Also:


Attachments
Patch (13.33 KB, patch)
2020-06-03 05:11 PDT, Carlos Garcia Campos
aperez: review+
Details | Formatted Diff | Diff

Note You need to log in before you can comment on or make changes to this bug.
Description Carlos Garcia Campos 2020-05-24 05:44:18 PDT
We should stop using GdkEvent for the synthesized composition events.
Comment 1 Carlos Garcia Campos 2020-06-03 05:11:07 PDT
Created attachment 400911 [details]
Patch
Comment 2 EWS Watchlist 2020-06-03 05:12:03 PDT
Thanks for the patch. If this patch contains new public API please make sure it follows the guidelines for new WebKit2 GTK+ API. See http://trac.webkit.org/wiki/WebKitGTK/AddingNewWebKit2API
Comment 3 Carlos Garcia Campos 2020-06-03 06:46:44 PDT
Committed r262484: <https://trac.webkit.org/changeset/262484>