[GTK4] Fix input methods https://bugs.webkit.org/show_bug.cgi?id=212317

Reviewed by Adrian Perez de Castro.

Stop using GdkEvent to synthesize compositing events, add a specific NativeWebKeyboardEvent constructor for them.

* Shared/NativeWebKeyboardEvent.h:
* Shared/gtk/NativeWebKeyboardEventGtk.cpp:
(WebKit::NativeWebKeyboardEvent::NativeWebKeyboardEvent):
* UIProcess/API/gtk/WebKitInputMethodContextImplGtk.cpp:
(webkitInputMethodContextImplGtkSetClientWidget):
(webkitInputMethodContextImplGtkSetClientWindow): Deleted.
* UIProcess/API/gtk/WebKitInputMethodContextImplGtk.h:
* UIProcess/API/gtk/WebKitWebViewBase.cpp:
(webkitWebViewBaseRealize):
(webkitWebViewBaseUnrealize):
(webkitWebViewBaseKeyPressEvent):
(webkitWebViewBaseKeyReleaseEvent):
(webkitWebViewBaseFocusEnter):
(webkitWebViewBaseFocusLeave):
(webkitWebViewBaseKeyPressed):
(webkitWebViewBaseKeyReleased):
(toplevelWindowIsActiveChanged):
(webkitWebViewBaseSynthesizeCompositionKeyPress):

Canonical link: https://commits.webkit.org/225511@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@262484 268f45cc-cd09-0410-ab3c-d52691b4dbfc